Mon Jan 15 17:35:25 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* sys_term.c: Call pty_update_utmp with PTY_TTYSLOT_USABLE flag.

Mon Nov 27 15:55:50 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* state.c: use P properly so it won't break non-ansi compilers.

Sun Nov 12 04:56:15 1995  Mark W. Eichin  <eichin@cygnus.com>

	* telnetd.8: source tmac.doc for correct parsing.

Sat Oct 21 15:37:55 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* state.c (envvarok): Also check for variables involving =.

Thu Oct 19 01:28:23 1995  Mark W. Eichin  <eichin@cygnus.com>

	* state.c (envvarok): New function, checks environment variables
	for exceptions that should not be passed to login.
	(suboption): don't do anything to propagated environment variables
	if they fail the exception test above.

Mon Oct  9 23:01:36 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* telnetd.c (getterminaltype): If ENCRYPTION defined, send do
        encryption, *not* just will encrypt. if you don't do this, then you won't encrypt the input to the server; your password prompt is encrypted, but your password isn't.

Tue Aug  8 11:26:54 1995  Sam Hartman  <hartmans@pao.mit.edu>

	* sys_term.c: Fail if the slave side dies.
	(dup_tty): Renamed from login_tty because OSF already has that function and it isn't compatible.

	(getptyslave): Fix argument to fatalperror by including com_err.h instead of casting.

Tue Aug 8 17:25:22 EDT 1995	Paul Park	(pjpark@mit.edu)
	* sys_term.c - Cast argument to fatalperror().




	* sys_term.c: Use new interface to pty_update_utmp.
	(getptyslave): Handle error return from pty_open_slave
	Close syncpipe[1] before we read from it.

Mon Aug 7 14:44:21 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in, sys_term.c - Use utmpx.h if present, then check for
		utmp.h.  Add logic to handle ut_tv from utmpx.h.


Mon Aug 7 13:08:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add check for utmp.h.  Make check for utmpx.h define