@@ -112,8 +112,8 @@ extern void
 	dooption P((int)),
 	dontoption P((int)),
 	edithost P((char *, char *)),
-	fatal P((int, char *)),
-	fatalperror P((int, char *)),
+	fatal P((int, const char *)),
+	fatalperror P((int, const char *)),
 	get_slc_defaults P((void)),
 	init_env P((void)),
 	init_termbuf P((void)),
